Rename dotnet/net to dotnet/native. Rename dotnet/net to dotnet/src.

--- a/dotnet/examples/SEALNetExamples.csproj
+++ b/dotnet/examples/SEALNetExamples.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../net/SEALNet.csproj" />
+    <ProjectReference Include="../src/SEALNet.csproj" />
   </ItemGroup>
 
   <ItemGroup>
