--- a/dotnet/native/CMakeLists.txt
+++ b/dotnet/native/CMakeLists.txt
@@ -3,13 +3,13 @@
 
 cmake_minimum_required(VERSION 3.10)
 
-project(SEALDLL VERSION 3.1.0 LANGUAGES CXX)
+project(SEALNetNative VERSION 3.1.0 LANGUAGES CXX)
 
 # Library will be in ../../lib
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../../lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/../lib)
 
 # Create library but add no source files yet
-add_library(sealdll SHARED "")
+add_library(sealnetnative SHARED "")
 
 # Import Microsoft SEAL
 find_package(SEAL 3.1.0 EXACT REQUIRED)
@@ -20,11 +20,11 @@ if (SEAL_LIB_BUILD_TYPE STREQUAL "Static")
 endif()
 
 # Link Microsoft SEAL
-target_link_libraries(sealdll SEAL::seal)
+target_link_libraries(sealnetnative SEAL::seal)
 
 # Add source files to library
 add_subdirectory(seal)
 
 # Install only the shared library. This library is only meant to be
 # used by the SEALNet .NET library.
-install(TARGETS sealdll LIBRARY DESTINATION lib)
+install(TARGETS sealnetnative LIBRARY DESTINATION lib)
