--- a/native/src/SEAL.vcxproj.filters
+++ b/native/src/SEAL.vcxproj.filters
@@ -291,5 +291,8 @@
     <None Include="cmake\Findmsgsl.cmake">
       <Filter>Other\cmake</Filter>
     </None>
+    <None Include="CMakeConfig.cmd">
+      <Filter>Other</Filter>
+    </None>
   </ItemGroup>
 </Project>
