--- a/dotnet/src/SEALNet.nuspec
+++ b/dotnet/src/SEALNet.nuspec
@@ -6,21 +6,21 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
     <id>Microsoft.Research.SEALNet</id>
-    <version>3.1.0</version>
+    <version>3.2.0</version>
     <title>Simple Encrypted Arithmetic Library</title>
     <authors>Microsoft Research</authors>
     <owners>Microsoft Corporation</owners>
     <projectUrl>http://sealcrypto.org</projectUrl>
     <license type="file">LICENSE</license>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>The Simple Encrypted Arithmetic Library (Microsoft SEAL) is an easy-to-use and powerful open source homomorphic encryption library, developed by researchers in the Cryptography Research Group at Microsoft Research. SEAL is licensed under the MIT license.</description>
+    <description>The Simple Encrypted Arithmetic Library (Microsoft SEAL) is an easy-to-use and powerful open source homomorphic encryption library, developed by researchers in the Cryptography Research Group at Microsoft Research. Microsoft SEAL is licensed under the MIT license.</description>
     <releaseNotes>http://sealcrypto.org/#!news</releaseNotes>
     <copyright>Copyright 2019</copyright>
-    <tags>c# crypto cryptography encryption homomorphicencryption</tags>
+    <tags>c# crypto cryptography homomorphic encryption</tags>
   </metadata>
   <files>
-    <file src="..\..\bin\x64\$Configuration$\sealdll.dll" target="build\x64\sealdll.dll" />
     <file src="SEALNet.targets" target="build\Microsoft.Research.SEALNet.targets" />
+    <file src="..\lib\x64\$Configuration$\sealnetnative.dll" target="lib\x64\" />
     <file src="bin\$Configuration$\netstandard2.0\SEALNet.*" target="lib\netstandard2.0\" exclude="**\*.pdb" />
     <file src="..\..\LICENSE" target="LICENSE" />
   </files>
