--- a/dotnet/src/SEALNet.targets
+++ b/dotnet/src/SEALNet.targets
@@ -5,9 +5,9 @@
 
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <NativeLibs Include="$(MSBuildThisFileDirectory)$(Platform)\SEALdll.dll" />
+    <NativeLibs Include="$(MSBuildThisFileDirectory)..\lib\x64\sealnetnative.dll" />
     <None Include="@(NativeLibs)">
-      <Link>SEALdll.dll</Link>
+      <Link>sealnetnative.dll</Link>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
