--- a/native/src/CMakeLists.txt
+++ b/native/src/CMakeLists.txt
@@ -50,6 +50,27 @@ include(CheckIncludeFiles)
 include(CheckCXXSourceRuns)
 include(CheckTypeSize)
 
+# For Easier Adding CXX Compiler Flags
+include(CheckCXXCompilerFlag)
+
+function(enable_cxx_compiler_flag_if_supported flag)
+    string(FIND "${CMAKE_CXX_FLAGS}" "${flag}" flag_already_set)
+    if(flag_already_set EQUAL -1)
+        message(STATUS "Adding CXX compiler flag: ${flag} ...")
+        check_cxx_compiler_flag("${flag}" flag_supported)
+        if(flag_supported)
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${flag}" PARENT_SCOPE)
+        endif()
+        unset(flag_supported CACHE)
+    endif()
+endfunction()
+
+# enable_cxx_compiler_flag_if_supported("-Wall")
+# enable_cxx_compiler_flag_if_supported("-Wextra")
+# enable_cxx_compiler_flag_if_supported("-Wconversion")
+# enable_cxx_compiler_flag_if_supported("-Wshadow")
+# enable_cxx_compiler_flag_if_supported("-pedantic")
+
 # Are we using SEAL_DEBUG?
 set(SEAL_DEBUG ${SEAL_DEBUG_DEFAULT})
 message(STATUS "Microsoft SEAL debug mode: ${SEAL_DEBUG}")
