--- a/native/src/SEAL.vcxproj
+++ b/native/src/SEAL.vcxproj
@@ -193,7 +193,7 @@
       <Command>"$(ProjectDir)CMakeConfig.cmd" $(Configuration) "$(DevEnvDir)" "$(IncludePath)"</Command>
     </PreBuildEvent>
     <PreBuildEvent>
-      <Message>Configure SEAL through CMake</Message>
+      <Message>Configure Microsoft SEAL through CMake</Message>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
