More README changes and update .Net projects to output to dotnet/bin and dotnet/lib

--- a/dotnet/src/SEALNet.csproj
+++ b/dotnet/src/SEALNet.csproj
@@ -10,9 +10,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin/Release/SEALNet.xml</DocumentationFile>
     <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>$(ProjectDir)../lib/$(Configuration)</OutputPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin/Debug/SEALNet.xml</DocumentationFile>
     <PlatformTarget>x64</PlatformTarget>
+    <OutputPath>$(ProjectDir)../lib/$(Configuration)</OutputPath>
   </PropertyGroup>
 </Project>
