Minor edits; changed to be C++14 compliant

--- a/dotnet/native/CMakeLists.txt
+++ b/dotnet/native/CMakeLists.txt
@@ -29,7 +29,7 @@ endif()
 # Link Microsoft SEAL
 target_link_libraries(sealnetnative SEAL::seal)
 
-# For Easier Adding CXX Compiler Flags
+# For easier adding of CXX compiler flags
 include(CheckCXXCompilerFlag)
 
 function(enable_cxx_compiler_flag_if_supported flag)
