--- a/dotnet/examples/SEALNetExamples.csproj
+++ b/dotnet/examples/SEALNetExamples.csproj
@@ -9,14 +9,9 @@
     <Copyright>Microsoft Corporation 2019</Copyright>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+  <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>$(ProjectDir)../bin/$(Configuration)</OutputPath>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>$(ProjectDir)../bin/$(Configuration)</OutputPath>
+    <OutputPath>../bin/$(Configuration)</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
