--- a/dotnet/src/SEALNet.csproj
+++ b/dotnet/src/SEALNet.csproj
@@ -7,14 +7,9 @@
     <Description>.NET wrapper library for Microsoft SEAL</Description>
     <Copyright>Microsoft Corporation 2019</Copyright>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>bin/Release/SEALNet.xml</DocumentationFile>
+  <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
+    <DocumentationFile>../lib/$(Configuration)/SEALNet.xml</DocumentationFile>
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>$(ProjectDir)../lib/$(Configuration)</OutputPath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin/Debug/SEALNet.xml</DocumentationFile>
-    <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>$(ProjectDir)../lib/$(Configuration)</OutputPath>
+    <OutputPath>../lib/$(Configuration)</OutputPath>
   </PropertyGroup>
 </Project>
