--- a/dotnet/nuget/SEALNet.nuspec
+++ b/dotnet/nuget/SEALNet.nuspec
@@ -21,7 +21,7 @@
   <files>
     <file src="SEALNet.targets" target="build\Microsoft.Research.SEALNet.targets" />
     <file src="..\lib\x64\$Configuration$\sealnetnative.dll" target="lib\x64\" />
-    <file src="bin\$Configuration$\netstandard2.0\SEALNet.*" target="lib\netstandard2.0\" exclude="**\*.pdb" />
+    <file src="..\lib\$Configuration$\netstandard2.0\SEALNet.*" target="lib\netstandard2.0\" exclude="**\*.pdb" />
     <file src="..\..\LICENSE" target="LICENSE" />
   </files>
 </package>
