SEALNetTest generates an assembly, not an executable

--- a/dotnet/tests/SEALNetTest.csproj
+++ b/dotnet/tests/SEALNetTest.csproj
@@ -11,7 +11,7 @@
 
   <PropertyGroup Condition="'$(Platform)'=='AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
-    <OutputPath>../bin/$(Configuration)</OutputPath>
+    <OutputPath>../lib/$(Configuration)</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
